--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Programming Blog</title>
+    <title>MachineMinds</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -267,7 +267,7 @@
     </section>
     <script>
         /* New Typing Effect using JavaScript */
-        let titleText = 'My Programming Blog ';
+        let titleText = 'MachineMinds ';
         let currentIndex = 0;
 
         function typeTitle() {
@@ -305,7 +305,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 My Programming Blog. All rights reserved.</p>
+        <p>&copy; 2023 MachineMinds. All rights reserved.</p>
     </footer>
 
     <!-- Add JavaScript for the dark mode toggle -->
