--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             <!-- Sample blog post links -->
             <div class="blog-post" onclick="window.location.href='blog-post-1.html'">
                 <h3>Introduction to Data Structures: Arrays, Linked Lists, Trees, Graphs, etc.</h3>
-                <p>Data structures are foundational in computer science, serving as a way to organize and store data in an efficient manner. They are crucial for implementing algorithms and building other data structures. In this post, we will delve into some of the most common data structures: Arrays, Linked Lists, Trees, and Graphs. By understanding their fundamental principles and applications, you can better appreciate the beauty of efficient data organization.</p>
+                <p>Data structures are foundational in computer science, serving as a way to organize and store data in an efficient manner...11th August 2023</p>
             </div>
             <div class="blog-post" onclick="window.location.href='blog-post-2.html'">
                 <h3>Blog Post 2</h3>
