--- a/blog-post-1.html
+++ b/blog-post-1.html
@@ -211,6 +211,8 @@
         <p class="blog-paragraph">
             These are just a few of the foundational data structures in computer science. Understanding their nuances, strengths, and weaknesses is essential for designing efficient algorithms and systems. As you dive deeper into this field, you'll discover a plethora of other data structures, each tailored for specific applications and challenges. Happy coding!
         </p>
+                <p class="blog-paragraph">Published on 11th August 2023
+        </p>
     </main>
 
     <footer>
