--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="https://www.youtube.com/@Agastya-Hukoo">YouTube</a></li>
             </ul>
         </nav>
     </header>
